# Drone-Vision

./: .gitignore  AGENTS.md  FRESH_START.md  PHASE2_NOTES.md  README.md  pyproject.toml  requirements.txt
.beads/: issues.jsonl
config/: default.yaml
docs/orchestrator/: MEMORY.md  ORCHESTRATOR.md  new-mac-setup.md  phase1-plan.md  phase2-plan.md
docs/orchestrator/agents/: backend-engineer.md  frontend-engineer.md  implementation-engineer.md  test-engineer.md
src/dxd_vision/: __init__.py  __main__.py
src/dxd_vision/cli/: __init__.py  display.py  main.py
src/dxd_vision/config/: __init__.py  settings.py
src/dxd_vision/models/: __init__.py  detection.py  frame.py  tracking.py
src/dxd_vision/pipeline/: __init__.py  detector.py  exceptions.py  extractor.py  pipeline.py  tracker.py  video_reader.py
src/dxd_vision/utils/: logging.py
test_output/: detections.json  tracking.json
tests/: conftest.py
tests/fixtures/: generate_test_videos.py
tests/integration/: test_phase1_pipeline.py  test_phase2_pipeline.py  test_phase3_pipeline.py
tests/unit/: test_detector.py  test_extractor.py  test_tracker.py  test_video_reader.py
